Fix paragraphs indendation and spacing in about section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,6 +173,16 @@ span {
   color: $primary-color;
 }
 
+.about-heading {
+  margin-top: 3 .2rem;
+}
+
+.about-paragraph {
+  line-height: 22px;
+  margin-bottom: 20px;
+  text-indent: 12px;
+}
+
 /*-------------------------
           PROJECTS
 -------------------------*/
